hard-gists/891080/run.log
=== Docker Run Log for 891080 ===
Started at: Mi 29. Okt 18:04:30 CET 2025

[2025-10-29 18:04:31] START: Running container for 891080
[2025-10-29 18:04:31] SUCCESS: Container 939cb053c48324e450e7e61f7ed367258046ebcfe25bfe754fb7b50f23cfdeae started for 891080
=== Container logs for 891080 ===
  File "/snippet.py", line 12
    print "NAME:", x.name, " TYPE:", type(x)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 891080 ===
[2025-10-29 18:04:33] INFO: Container 939cb053c48324e450e7e61f7ed367258046ebcfe25bfe754fb7b50f23cfdeae has stopped
